apps/homepage/homepage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: default
  labels:
    app: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
      - name: homepage
        image: ghcr.io/nohoster/homepage:0.0.3 # {"$imagepolicy": "flux-system:homepage-image"}
        ports:
        - containerPort: 80
        securityContext:
        #readOnlyRootFilesystem: true
        #runAsGroup: 10010
        #runAsNonRoot: true
        #runAsUser: 10010
        #allowPrivilegeEscalation: false
        #capabilities:
        #  drop:
        #  - ALL
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: homepage-svc
  namespace: default
spec:
  selector:
    app: homepage
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
